src/objects/metazoa3__snapshot_push__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Org Management. This object records information about the Metadata Deployments made by Snapshot.</description>
    <fields>
        <fullName>metazoa3__apex_tests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Run Apex Tests flag from the push settings.</description>
        <label>Apex Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__apply_transforms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Apply Transforms flag from the push settings.</description>
        <label>Apply Transforms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__code_quality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_arrow__c</fullName>
        <description>This text field shows the arrow item name.</description>
        <label>Created Arrow</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_company__c</fullName>
        <label>Created Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_fullname__c</fullName>
        <label>Created Fullname</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_gmt__c</fullName>
        <description>This is the GMT date that the push was executed. Snapshot uses this string to be sure that snapshots are up to date before a push.</description>
        <label>Created GMT</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_guid__c</fullName>
        <description>This is the GUID from the arrow folder.</description>
        <label>Created GUID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_orgid__c</fullName>
        <label>Created Orgid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_userid__c</fullName>
        <label>Created Userid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__created_username__c</fullName>
        <label>Created Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__deploy_managed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deploy Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_company__c</fullName>
        <label>Destination Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_date__c</fullName>
        <label>Destination Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_folder__c</fullName>
        <label>Destination Folder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_fullname__c</fullName>
        <label>Destination Fullname</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_guid__c</fullName>
        <description>This is the GUID of the destination folder.</description>
        <label>Destination GUID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_item__c</fullName>
        <description>This is the name of the destination snapshot folder.</description>
        <label>Destination Item</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_orgid__c</fullName>
        <label>Destination Orgid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_userid__c</fullName>
        <label>Destination Userid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__destination_username__c</fullName>
        <description>This is the destination username for the pushed data.</description>
        <label>Destination Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__detailed_comments__c</fullName>
        <description>These are the user definable detailed comments from the push interface.</description>
        <label>Detailed Comments</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__empty_recycle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Empty Recycle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__ignore_warnings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Ignore Warnings flag from the push settings.</description>
        <label>Ignore Warnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_create__c</fullName>
        <description>This field is used by the continuous integration system.</description>
        <label>Job Create</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_delete__c</fullName>
        <label>Job Delete</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_guid__c</fullName>
        <description>This field is used by the continuous integration system.</description>
        <label>Job GUID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_history__c</fullName>
        <label>Job History</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_limits__c</fullName>
        <description>This field is used by the continuous integration system.</description>
        <label>Job Limits</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_name__c</fullName>
        <description>This field is used by the continuous integration system.</description>
        <label>Job Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_quality__c</fullName>
        <label>Job Quality</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_reference__c</fullName>
        <label>Job Reference</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_status__c</fullName>
        <description>This field is used by the continuous integration system.</description>
        <label>Job Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_tests__c</fullName>
        <label>Job Tests</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_transforms__c</fullName>
        <label>Job Transforms</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__made_changes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set when a successful push also made some actual changes to the destination org.</description>
        <label>Made Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__minmax_quality__c</fullName>
        <label>Minmax Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa3__push_action__c</fullName>
        <label>Push Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__push_results__c</fullName>
        <description>This is the detailed information about the push results.</description>
        <label>Push Results</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__push_type__c</fullName>
        <description>This is the type of push that was conducted. For example: Check For Errors Without Making Changes</description>
        <label>Push Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__quick_deploy__c</fullName>
        <description>This field store a Quick Deploy job id for later use in a push.</description>
        <label>Quick Deploy</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__remove_references__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Remove Bad References flag from the push settings.</description>
        <label>Remove References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__searchable_tags__c</fullName>
        <description>These are the user definable Searchable Tags from the push interface.</description>
        <label>Searchable Tags</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_company__c</fullName>
        <label>Source Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_date__c</fullName>
        <label>Source Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_folder__c</fullName>
        <label>Source Folder</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_fullname__c</fullName>
        <label>Source Fullname</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_guid__c</fullName>
        <description>This is the GUID of the source folder.</description>
        <label>Source GUID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_item__c</fullName>
        <description>This is the item name of the source snapshot.</description>
        <label>Source Item</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_orgid__c</fullName>
        <label>Source Orgid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_userid__c</fullName>
        <label>Source Userid</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__source_username__c</fullName>
        <description>This is the source username that pushed the metadata.</description>
        <label>Source Username</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__successful_push__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is true if the push was successful.</description>
        <label>Successful Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__workspace_name__c</fullName>
        <label>Workspace Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Snapshot Deployment</label>
    <listViews>
        <fullName>metazoa3__All</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__created_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__All_Failed_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__successful_push__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Failed Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__All_Successful_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__successful_push__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Successful Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Failed_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>metazoa3__successful_push__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Failed Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__My_Successful_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>metazoa3__successful_push__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Successful Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__Today_s_Failed_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__successful_push__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Failed Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__Today_s_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Pushes</label>
    </listViews>
    <listViews>
        <fullName>metazoa3__Today_s_Successful_Pushes</fullName>
        <columns>NAME</columns>
        <columns>metazoa3__push_type__c</columns>
        <columns>metazoa3__source_username__c</columns>
        <columns>metazoa3__successful_push__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>metazoa3__successful_push__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Successful Pushes</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>